WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
161554
Object.preventExtensions(window) should throw a TypeError
https://bugs.webkit.org/show_bug.cgi?id=161554
Summary
Object.preventExtensions(window) should throw a TypeError
Chris Dumez
Reported
2016-09-02 16:16:47 PDT
Object.preventExtensions() should throw a TypeError if [[PreventExtensions]] returns false: -
https://tc39.github.io/ecma262/#sec-object.preventextensions
We currently do not throw.
Attachments
Patch
(5.77 KB, patch)
2016-09-02 19:02 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2016-09-02 19:02:08 PDT
Created
attachment 287845
[details]
Patch
Darin Adler
Comment 2
2016-09-03 07:25:43 PDT
Comment on
attachment 287845
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=287845&action=review
The code here doesn’t make sense to me.
> Source/WebCore/bindings/js/JSDOMWindowCustom.cpp:349 > + throwTypeError(exec, scope, ASCIILiteral("Cannot prevent extensions on this object"));
Should the message be more specific than "this object"?
WebKit Commit Bot
Comment 3
2016-09-03 07:46:54 PDT
Comment on
attachment 287845
[details]
Patch Clearing flags on attachment: 287845 Committed
r205404
: <
http://trac.webkit.org/changeset/205404
>
WebKit Commit Bot
Comment 4
2016-09-03 07:46:57 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug