Object.preventExtensions(window) should throw a TypeError https://bugs.webkit.org/show_bug.cgi?id=161554

Reviewed by Darin Adler.

Source/WebCore:

Object.preventExtensions(window) should throw a TypeError.

[[PreventExtensions]] should return false for Window:
- https://html.spec.whatwg.org/#windowproxy-preventextensions

EcmaScript says that Object.preventExtensions() should throw a TypeError
if [[PreventExtension]] returns false:
- https://tc39.github.io/ecma262/#sec-object.preventextensions

No new tests, updated existing test.

* bindings/js/JSDOMWindowCustom.cpp:
(WebCore::JSDOMWindow::preventExtensions):

LayoutTests:

* http/tests/security/preventExtensions-window-location-expected.txt:
* http/tests/security/preventExtensions-window-location.html:


Canonical link: https://commits.webkit.org/179736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205404 268f45cc-cd09-0410-ab3c-d52691b4dbfc